--- a/src/scss/_seasons_index.scss
+++ b/src/scss/_seasons_index.scss
@@ -1,7 +1,7 @@
 .seasonImg {
   width: 100%;
   border: 2px solid #ff3fd2;
-  // border-radius: 115px;
+  border-radius: 115px;
   margin-bottom: 50px;
   float: left;
 }
