--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -2,71 +2,16 @@
   <a class="breadcrumb-item" href="home">Home /</a>
 </nav>
 
-
-<div class="regLog">
-  <li class="Reg" ng-hide="main.user">
-    <a ui-sref="register">Register</a>
-  </li>
-  <li class="Log" ng-hide="main.user">
-    <a ui-sref="login">Sign Up</a>
-  </li>
-</div>
-
-<br>
-<br>
-<br>
-<!-- <h1>Welcom to Drag Race</h1> -->
-
-<div class="containerSeasonImg">
-  <img class="indexSeasonImg" src="images/index-page-season-img.png"><a href="seasons"></a>
-  <div class="overlay">
-    <div class="seasonsIndexTitle"><h1><a href="seasons"> Drag Seasons</a></h1></div>
-  </div>
-</div>
-
-<!-- <div class="grades">
-  <div class="desktopGrades desktopGrades1">
-    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="searchTheQueens"><a href="queens"> Search The Queens</a></h1>
-  </div> -->
-
-  <!-- <div class="desktopGrades desktopGrades2 ">
-    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragQuotes">Drag Quotes</h1>
-  </div>
-
-  <div class="desktopGrades desktopGrades3">
-    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragVids">Drag Vids</h1>
-  </div>
-
-  <div class="desktopGrades desktopGrades4">
-    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragGiphy">Drag Giphys</h1>
-  </div>
-</div> -->
-
-
-<div class="containerQueenImg">
-<img class="indexQueenImg" src="images/Alaska.png">
-<div class="queenIndexOverlay">
-<div class="queensIndexTitle"><h1><a href="queens"> Queens</a></h1></div>
-</div>
-</div>
-
-<div class="containerQueenImg">
-<img class="indexQueenImg" src="images/index-page-season-img.png">
-<div class="queenIndexOverlay">
-<div class="queensIndexTitle"><h1><a href="giphy"> Drag Giphys</a></h1></div>
-</div>
-</div>
-
-<div class="containerQueenImg">
-<img class="indexQueenImg" src="images/Alaska.png">
-<div class="queenIndexOverlay">
-<div class="queensIndexTitle"><h1><a href="video"> Drag Vids</a></h1></div>
-</div>
-</div>
-
-<div class="containerQueenImg">
-<img class="indexQueenImg" src="images/index-page-season-img.png">
-<div class="queenIndexOverlay">
-<div class="queensIndexTitle"><h1><a href="queens"> Drag Quotes</a></h1></div>
-</div>
-</div>
+<section>
+  <div class="paralax-1">
+  <div class="new-paralax">
+  <h1>Simple Paralax</h1>
+    </div>
+    </div>
+</section>
+<section>
+</section>
+<section>
+  <h1>Background-mode-blend: screen;</h1>
+</section>
+<section></section>
