changing some queens and season styling

--- a/src/js/views/seasons/index.html
+++ b/src/js/views/seasons/index.html
@@ -4,10 +4,11 @@
 </nav>
 
 <!-- <h1>Seasons</h1> -->
+<div class="blocker"></div>
 <ul>
   <li ng-repeat="season in seasonsIndex.seasons track by $index">
     <ul>
-      <li><a ui-sref="seasonsShow({ id: season.id })"><img class="seasonImg" ng-src="{{season.image}}"></a><h1 class="seasonTitle">{{ season.title }}</h1></li>
+      <li><a ui-sref="seasonsShow({ id: season.id })"><img class="seasonImg" ng-src="{{season.image}}"></a>
       <li></li>
     </ul>
   </li>
