added parallax to index page

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -2,16 +2,77 @@
   <a class="breadcrumb-item" href="home">Home /</a>
 </nav>
 
-<section>
-  <div class="paralax-1">
-  <div class="new-paralax">
-  <h1>Simple Paralax</h1>
+<div class="wrapper">
+
+  <div class="ccparallaxeff">
+
+    <div class="plax ccparallax ccparallax-one">
+      <div class="container">
+        <h1>Search The Seasons</h1>
+      </div>
     </div>
+
+    <div class="plax content">
+      <div class="container">
+        <div class="headlines">
+          <!-- <h2>Responisve Design</h2>
+          <p>Work on all major devices</p> -->
+        </div>
+        <div class="contentarea">
+        </div>
+      </div>
     </div>
-</section>
-<section>
-</section>
-<section>
-  <h1>Background-mode-blend: screen;</h1>
-</section>
-<section></section>
+
+        <div class="plax ccparallax ccparallax-two">
+          <div class="container">
+            <h1>Search The Queens</h1>
+          </div>
+        </div>
+
+        <div class="plax content">
+          <div class="container">
+            <div class="headlines">
+              <!-- <h2>Nice Effect</h2>
+              <p>All in just one place</p> -->
+            </div>
+          </div>
+        </div>
+        <div class="plax ccparallax ccparallax-three">
+          <div class="container">
+            <h1>Drag Giphys</h1>
+          </div>
+        </div>
+
+        <div class="plax content">
+          <div class="container">
+            <div class="headlines">
+              <!-- <h2>The End</h2>
+              <p>Thanks for visting</p> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="plax ccparallax ccparallax-three">
+          <div class="container">
+            <h1>Drag Quotes</h1>
+          </div>
+        </div>
+
+        <div class="plax content">
+          <div class="container">
+            <div class="headlines">
+              <!-- <h2>The End</h2>
+              <p>Thanks for visting</p> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="crt-parallaxvideo">
+          <video autoplay muted loop>
+            <!-- <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"> -->
+              <!-- <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg"> -->
+              </video>
+              <h1>Drag Videos</h1>
+            </div>
+      </div>
+    </div>
