--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -1,57 +1,110 @@
-@mixin backgrounds(){
-  background-attachment:fixed;
-  background-size:cover!important;
-  background-position:center;
-  background-blend-mode:screen;
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
 }
-html, body{ margin:0; height:100%; }
-section{
-  position:relative;
-  height:100%;
-  @include backgrounds();
 
-  h1{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    font-size:50px;
-    color:#fff;
-    width:100%;
-    text-align:center;
-  }
-  &:nth-of-type(1){
-    .paralax-1{
-      height:100%;
-      width:100%;
-      position:relative;
-      overflow:hidden;
-      .new-paralax{
-        z-index:-100000;
-        transform:translateZ(-8000px) scale(.4);
-        @include backgrounds();
-        height:100%;
-        width:100%;
-        position:relative;
-        transform:scale(1.3);
-        background-color: #f55;
-        background-image:url('https://vignette3.wikia.nocookie.net/logosrupaulsdragrace/images/d/d7/S6cast.jpg/revision/latest/scale-to-width-down/690?cb=20161204073715');
-      } /* .new-paralax */
-    } /* .paralax-1 */
-  } /* &:nth-of-type(1) */
+.crt-parallaxvideo{
+  height: 300px;
+  padding-bottom: 50px;
+  padding-top: 50px;
 
-  &:nth-of-type(2){
-    background-image:url('http://www.newnownext.com/wp-content/uploads/2013/12/RPDRS6_QueensGroupComp-onGRDNT_608x310px.jpg');
-  }
-  &:nth-of-type(3){
-    background-image:url('http://68.media.tumblr.com/469848bf945c79dbbc941281a29a575a/tumblr_my8p2qvbbi1sqwuruo1_500.jpg');
-    background-color:red;
-
-  }
-  &:nth-of-type(4){
-    background-image:url('https://s-media-cache-ak0.pinimg.com/originals/fa/7a/10/fa7a10a180066c9b79ee4de641e64277.jpg');
-  }
 }
+.crt-parallaxvideo video{
+  min-width: 100%;
+  position: fixed;
+  top:0;
+  z-index: -100;
+
+}
+.crt-parallaxvideo h1 {
+  color: white;
+  font-size: 76px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: rgba(255, 63, 210, 0.9);
+  padding: 10px;
+  border-radius: 50px;
+}
+
+.plax.ccparallax-one {
+  background-image: url("../images/index-page-season-img.png");
+  width: 1441px;
+  margin-left: -255px;
+  // border: 1px solid;
+}
+.plax.ccparallax-two {
+  background-image: url("../images/Alaska.png");
+}
+.plax.ccparallax-three {
+  background-image: url("../images/paxallax3.jpg");
+}
+
+
+.plax:last-child {
+  margin-bottom: 0;
+}
+
+.plax.ccparallax {
+  background-attachment: fixed;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  height: 320px;
+}
+
+.plax.content {
+  background: none repeat scroll 0 0 #ff3fd2;
+  padding: 42px 0;
+  width: 155%;
+  // border: 1px solid;
+  margin-left: -256px;
+  height: 140px;
+
+}
+.plax.ccparallax h1 {
+  font-weight: 700;
+  font-size: 76px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  background-color: rgba(255, 63, 210, 0.9);
+  padding: 10px;
+  border-radius: 50px;
+}
+
+.plax .headlines h2 {
+  color: white;
+  font-family: "PT Sans",sans-serif;
+  font-size: 32px;
+  margin: 0;
+  text-align: center;
+}
+.plax .headlines p {
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0;
+  color:red;
+  text-align: center;
+}
+.plax .contentarea, .plax .contentarea h2{
+  color:black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 // .indexSeasonImg {
