added images and more to parallax

--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -34,7 +34,7 @@
   // border: 1px solid;
 }
 .plax.ccparallax-two {
-  background-image: url("../images/Alaska.png");
+  background-image: url("../images/searchTheQueens.png");
 }
 .plax.ccparallax-three {
   background-image: url("../images/paxallax3.jpg");
