added pics and more parallax styling

--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -28,13 +28,14 @@
 }
 
 .plax.ccparallax-one {
-  background-image: url("../images/index-page-season-img.png");
+  background-image: url("../images/index-page-season-img.jpg");
   width: 1441px;
   margin-left: -255px;
-  // border: 1px solid;
 }
 .plax.ccparallax-two {
   background-image: url("../images/searchTheQueens.png");
+  margin-left: -236px;
+  width: 1443px;
 }
 .plax.ccparallax-three {
   background-image: url("../images/paxallax3.jpg");
