more parallax styling

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,14 +1,13 @@
-<nav class="breadcrumb">
+<!-- <nav class="breadcrumb">
   <a class="breadcrumb-item" href="home">Home /</a>
-</nav>
+</nav> -->
 
 <div class="wrapper">
-
   <div class="ccparallaxeff">
 
     <div class="plax ccparallax ccparallax-one">
       <div class="container">
-        <h1>Search The Seasons</h1>
+        <h1><a href="seasons">Search The Seasons</a></h1>
       </div>
     </div>
 
@@ -23,56 +22,56 @@
       </div>
     </div>
 
-        <div class="plax ccparallax ccparallax-two">
-          <div class="container">
-            <h1>Search The Queens</h1>
-          </div>
-        </div>
-
-        <div class="plax content">
-          <div class="container">
-            <div class="headlines">
-              <!-- <h2>Nice Effect</h2>
-              <p>All in just one place</p> -->
-            </div>
-          </div>
-        </div>
-        <div class="plax ccparallax ccparallax-three">
-          <div class="container">
-            <h1>Drag Giphys</h1>
-          </div>
-        </div>
-
-        <div class="plax content">
-          <div class="container">
-            <div class="headlines">
-              <!-- <h2>The End</h2>
-              <p>Thanks for visting</p> -->
-            </div>
-          </div>
-        </div>
-
-        <div class="plax ccparallax ccparallax-three">
-          <div class="container">
-            <h1>Drag Quotes</h1>
-          </div>
-        </div>
-
-        <div class="plax content">
-          <div class="container">
-            <div class="headlines">
-              <!-- <h2>The End</h2>
-              <p>Thanks for visting</p> -->
-            </div>
-          </div>
-        </div>
-
-        <div class="crt-parallaxvideo">
-          <video autoplay muted loop>
-            <!-- <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"> -->
-              <!-- <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg"> -->
-              </video>
-              <h1>Drag Videos</h1>
-            </div>
+    <div class="plax ccparallax ccparallax-two">
+      <div class="container">
+        <h1><a href="queens">Meet The Queens</a></h1>
       </div>
     </div>
+
+    <div class="plax content">
+      <div class="container">
+        <div class="headlines">
+          <!-- <h2>Nice Effect</h2>
+          <p>All in just one place</p> -->
+        </div>
+      </div>
+    </div>
+    <div class="plax ccparallax ccparallax-three">
+      <div class="container">
+        <h1><a href="giphy">Drag Giphys</a></h1>
+      </div>
+    </div>
+
+    <div class="plax content">
+      <div class="container">
+        <div class="headlines">
+          <!-- <h2>The End</h2>
+          <p>Thanks for visting</p> -->
+        </div>
+      </div>
+    </div>
+
+    <div class="plax ccparallax ccparallax-four">
+      <div class="container">
+        <h1><a href="quotes">Drag Quotes</a></h1>
+      </div>
+    </div>
+
+    <div class="plax content">
+      <div class="container">
+        <div class="headlines">
+          <!-- <h2>The End</h2>
+          <p>Thanks for visting</p> -->
+        </div>
+      </div>
+    </div>
+
+    <div class="crt-parallaxvideo">
+      <video class="video" autoplay muted loop>
+        <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+      <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+      </video>
+      <h1><a href="queens">Drag Vids</a></h1>
+    </div>
+  </div>
+</div>
