--- a/src/scss/_seasons_index.scss
+++ b/src/scss/_seasons_index.scss
@@ -1,9 +1,12 @@
 .seasonImg {
-  width: 136%;
-  // border: 2px solid #ff3fd2;
+  width: 170%;
   margin-bottom: 50px;
-  margin-left: -231px;
+  margin-left: -336px;
   margin-top: -50px;
+  // width: 136%;
+  // margin-bottom: 50px;
+  // margin-left: -231px;
+  // margin-top: -50px;
   // width: 100%;
   // border: 2px solid #ff3fd2;
   // border-radius: 115px;
