--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -68,8 +68,8 @@
 
     <div class="crt-parallaxvideo">
       <video class="video" autoplay muted loop>
-        <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+        <!-- <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+      <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg"> -->
       </video>
       <h1><a href="queens">Drag Vids</a></h1>
     </div>
