--- a/src/scss/_giphy.scss
+++ b/src/scss/_giphy.scss
@@ -3,9 +3,9 @@
 // }
 
 .giphyImg {
-  float: left;
   border: 10px inset #ff3fd2;
-  width: 45%;
+  float: left;
+  width: 50%;
   height: 290px;
 }
 
@@ -13,3 +13,7 @@
   text-align: center;
   margin-bottom: 60px;
 }
+
+// .giphyContainer {
+//   margin-left: -170px;
+// }
