--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -58,7 +58,7 @@
   background-size: cover;
   padding-bottom: 50px;
   padding-top: 50px;
-  height: 320px;
+  height: 420px;
 }
 
 .plax.content {
@@ -76,7 +76,7 @@
   font-size: 76px;
   text-align: center;
   text-transform: uppercase;
-  color: white;
+  color: black;
   background-color: rgba(255, 63, 210, 0.9);
   padding: 10px;
   padding-top: 20px;
