adding video to landing page

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -50,11 +50,11 @@
         </div>
       </div>
     </div>
-
-    <div class="plax ccparallax ccparallax-four">
-      <div class="container">
-        <h1><a href="quotes">Drag Quotes</a></h1>
-      </div>
+    <div class="crt-parallaxvideo">
+      <video autoplay muted loop>
+      <source src="http://tjshaw.co.uk/video/dragrace.mp4" type="video/mp4">
+      </video>
+      <h1><a href="quotes">Drag Vids</a></h1>
     </div>
 
     <div class="plax content">
@@ -66,12 +66,10 @@
       </div>
     </div>
 
-    <div class="crt-parallaxvideo">
-      <video class="video" autoplay muted loop>
-        <!-- <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg"> -->
-      </video>
-      <h1><a href="queens">Drag Vids</a></h1>
+    <div class="plax ccparallax ccparallax-four">
+      <div class="container">
+        <h1><a href="quotes">Drag Quotes</a></h1>
+      </div>
     </div>
   </div>
 </div>
