--- a/src/js/views/queens/index.html
+++ b/src/js/views/queens/index.html
@@ -3,6 +3,7 @@
   <a class="breadcrumb-item" href="home">Home /</a>
   <a class="breadcrumb-item" href="seasons">Queens</a>
 </nav>
+<div class="queensShowContainer">
 <li ng-repeat="queen in queensIndex.queens track by $index">
   <div class="queensIndexList">
     <ul>
@@ -10,3 +11,4 @@
     </ul>
   </div>
 </li>
+</div>
