--- a/src/js/views/dragrace.html
+++ b/src/js/views/dragrace.html
@@ -1,1 +1,12 @@
-<h1>Drag Race Home</h1>
+<!-- <h1>Drag Race Home</h1> -->
+
+<div class="video">
+  <video autoplay loop sound>
+  <source src="http://tjshaw.co.uk/video/dragrace.mp4" type="video/mp4">
+  </video>
+</div>
+<div class="overlayVid"></div>
+<div class="signUpLanding">
+<a class="regIndex"href="register">Sign Up</a>
+<a class="loginIndex"href="login">Log in</a>
+</div>
