--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -4,15 +4,24 @@
 }
 
 .crt-parallaxvideo{
-  height: 300px;
+  height: 500px;
   padding-bottom: 50px;
   padding-top: 50px;
+  margin-top: 120px;
 
 }
-.crt-parallaxvideo .video{
-  min-width: 100%;
+.crt-parallaxvideo video{
+  // min-width: 100%;
+  // position: fixed;
+  // top:0;
+  // z-index: -100;
   position: fixed;
-  top:0;
+  top: 0%;
+  left: 0%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
   z-index: -100;
 }
 .crt-parallaxvideo h1 {
@@ -34,16 +43,18 @@
 }
 .plax.ccparallax-two {
   background-image: url("../images/searchTheQueens.png");
-  margin-left: -236px;
+  margin-left: -255px;
   width: 1440px;
 }
 .plax.ccparallax-three {
-  background-image: url("../images/paxallax3.jpg");
+  background-image: url("../images/index-page-season-img.jpg");
+  margin-left: -255px;
+  width: 1440px;
 }
 
 .plax.ccparallax-four {
   background-image: url("../images/quotes.png");
-  margin-left: -236px;
+  margin-left: -255px;
   width: 1440px;
 }
 
@@ -58,7 +69,7 @@
   background-size: cover;
   padding-bottom: 50px;
   padding-top: 50px;
-  height: 420px;
+  height: 500px;
 }
 
 .plax.content {
@@ -81,6 +92,7 @@
   padding: 10px;
   padding-top: 20px;
   border-radius: 50px;
+  margin-top: 120px;
 }
 
 
