adding overlay, sign up login to landing page

--- a/src/js/views/dragrace.html
+++ b/src/js/views/dragrace.html
@@ -1,11 +1,11 @@
-<!-- <h1>Drag Race Home</h1> -->
-
+<div class="overlayVid"></div>
+<img class="mainLogoIndex"src="../images/DragRace-Logo.png" alt="">
 <div class="video">
   <video autoplay loop sound>
   <source src="http://tjshaw.co.uk/video/dragrace.mp4" type="video/mp4">
   </video>
 </div>
-<div class="overlayVid"></div>
+
 <div class="signUpLanding">
 <a class="regIndex"href="register">Sign Up</a>
 <a class="loginIndex"href="login">Log in</a>
