images and adding videos

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -54,7 +54,7 @@
       <video autoplay muted loop>
       <source src="http://tjshaw.co.uk/video/dragrace.mp4" type="video/mp4">
       </video>
-      <h1><a href="quotes">Drag Vids</a></h1>
+      <h1><a href="videos">Drag Vids</a></h1>
     </div>
 
     <div class="plax content">
