--- a/src/js/views/quotes/index.html
+++ b/src/js/views/quotes/index.html
@@ -1,3 +1,7 @@
-<h1>Drag Quotes</h1>
+<nav class="breadcrumb">
+  <a class="breadcrumb-item" href="home">Home /</a>
+  <a class="breadcrumb-item" href="quotes">Drag Race Quotes</a>
+</nav>
+<!-- <h1>Drag Quotes</h1> -->
 
-<img src="../images/quotes_main.png">
+<img class="quotesIndex"src="../images/quotes_main.png">
