--- a/src/js/views/videos/index.html
+++ b/src/js/views/videos/index.html
@@ -1,1 +1,19 @@
-<h1>Drag Vids</h1>
+<!-- <h1>Drag Vids</h1> -->
+<nav class="breadcrumb">
+  <a class="breadcrumb-item" href="home">Home /</a>
+  <a class="breadcrumb-item" href="video">DragVids</a>
+</nav>
+
+<div class="videoDiv">
+  <h1>Greatest Entrances</h1>
+<iframe src="https://www.youtube.com/embed/p6MRGM7x41M" width="500" height="500"></iframe>
+  <h1>Best of Snatch Game</h1>
+<iframe src="https://www.youtube.com/embed/kTeWI7Azij8" width="500" height="500"></iframe>
+  <h1>Top 50 Runway Look</h1>
+<iframe src="https://www.youtube.com/embed/XBQukCnz3uw" width="500" height="500"></iframe>
+  <h1>Top 10 Lip Sync For Your Life</h1>
+<iframe src="https://www.youtube.com/embed/zPJ8ZFfuA0o" width="500" height="500"></iframe>
+<h1>Alyessa Edwards Best Bits</h1>
+<iframe src="https://www.youtube.com/embed/Ir7_2TJjpwA" width="500" height="500"></iframe>
+
+</div>
