adding images and rearranging

--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -65,12 +65,12 @@
 
 .plax.ccparallax {
   background-attachment: fixed;
-  background-position: 50% 50%;
+  // background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 50px;
   padding-top: 50px;
-  height: 500px;
+  height: 650px;
 }
 
 .plax.content {
@@ -85,7 +85,7 @@
 }
 .plax.ccparallax h1 {
   font-weight: 700;
-  font-size: 76px;
+  font-size: 80px;
   text-align: center;
   text-transform: uppercase;
   color: black;
@@ -93,7 +93,7 @@
   padding: 10px;
   padding-top: 20px;
   border-radius: 50px;
-  margin-top: 120px;
+  margin-top: 190px;
 }
 
 
