--- a/src/js/views/queens/show.html
+++ b/src/js/views/queens/show.html
@@ -10,7 +10,7 @@
 
 <div class="queenShowIndexInfo">
   <ul>
-    <li><h4 class="queensShowIndexInfo">Position in {{queensShow.queen.season_id}}:</h4><p>{{queensShow.queen.position}}</p></li>
+    <li><h4 class="queensShowIndexInfo">Position:</h4><p>{{queensShow.queen.position}}</p></li>
     <li><h4 class="queensShowIndexInfo">Drag Name:</h4><p>{{queensShow.queen.drag_name}}</p></li>
     <li><h4 class="queensShowIndexInfo">Also Know As:</h4><p>{{queensShow.queen.first_name}} {{queensShow.queen.last_name}}</p></li>
     <li><h4 class="queensShowIndexInfo">Website:</h4><p>{{queensShow.queen.website}}</p></li>
