making link black

--- a/src/js/views/queens/show.html
+++ b/src/js/views/queens/show.html
@@ -13,9 +13,13 @@
     <li><h4 class="queensShowIndexInfo">Position:</h4><p>{{queensShow.queen.position}}</p></li>
     <li><h4 class="queensShowIndexInfo">Drag Name:</h4><p>{{queensShow.queen.drag_name}}</p></li>
     <li><h4 class="queensShowIndexInfo">Also Know As:</h4><p>{{queensShow.queen.first_name}} {{queensShow.queen.last_name}}</p></li>
-    <li><h4 class="queensShowIndexInfo">Website:</h4><p>a{{queensShow.queen.website}}</p></li>
-    <li><h4 class="queensShowIndexInfo">Instagram:</h4><p>{{queensShow.queen.instagram}}</apli>
-    <li><h4 class="queensShowIndexInfo">Twitter:</h4><p>{{queensShow.queen.twitter}}</p></li>
+
+    <li><h4 class="queensShowIndexInfo">Website:</h4><p><a class="showLink" href="{{queensShow.queen.website}}">{{queensShow.queen.website}}</a></p></li>
+
+    <li><h4 class="queensShowIndexInfo">Instagram:</h4><p><a class="showLink" href="{{queensShow.queen.instagram}}">{{queensShow.queen.instagram}}</a></p></li>
+
+    <li><h4 class="queensShowIndexInfo">Twitter:</h4><p><a class="showLink" href="{{queensShow.queen.twitter}}">{{queensShow.queen.twitter}}</a></p></li>
+
     <br>
   </ul>
 </div>
